release 3.1.106 source code