@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     <groupId>com.huaweicloud.sdk</groupId>
     <artifactId>huaweicloud-sdk</artifactId>
-    <version>3.1.105</version>
+    <version>3.1.106</version>
     <name>Huawei Cloud SDK for Java Parent</name>
     <description>Huawei Cloud SDK for Java</description>
     <url>https://github.com/huaweicloud/huaweicloud-sdk-java-v3</url>
@@ -175,10 +175,50 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>${add.args}</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
+            <properties>
+                <add.args>
+                    --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.util=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
+                </add.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <properties>
+                <add.args>
+                    --add-exports=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED
+                    --add-exports=jdk.crypto.ec/sun.security.ec=java.base
+                </add.args>
+            </properties>
+        </profile>
         <profile>
             <id>release</id>
             <build>
